--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -1517,10 +1517,7 @@ cortesía
 status collapsed
 
 \begin_layout Plain Layout
-
 definido en 
-\lang spanish
-
 \begin_inset Flex URL
 status open
 
@@ -8673,7 +8670,8 @@ Documenta: el usuario ha iniciado sesión, se ha creado o recuperado el perfil
 \emph on
 contexto local
 \emph default
-).El sistema se vale del componente de búsqueda y filtrado para obtener recomenda
+).
+ El sistema se vale del componente de búsqueda y filtrado para obtener recomenda
 ciones y mostrarlas.
  El sistema debe saber cuándo el contexto inmediato difiere significativamente
  del último al cual se hicieron recomendaciones para volver a iniciar el
@@ -8686,9 +8684,18 @@ Agrega
 \begin_inset space ~
 \end_inset
 
-Documentos: el usuario elige incluir documentos a su sesión.
+Documentos: el usuario elige incluir documentos en su sesión.
  El sistema debe incluirlos como parte del contexto inmediato y realizar
  nuevas recomendaciones.
+ Dada la posible gran cantidad de texto a procesar aportada por estos documentos
+ y las restricciones de tiempo inherentes al propósito del sistema, es posible
+ que el sistema deba elegir basarse sólo en los títulos o en la existencia
+ previa de los documentos en la colección para la búsqueda y el filtrado
+ -nótese, sin embargo, que, al terminar la sesión, los documentos 
+\emph on
+sí
+\emph default
+ son considerados para la construcción del perfil.
 \end_layout
 
 \begin_layout Description
@@ -8714,7 +8721,8 @@ sesión: en este momento, el usuario se prepara para abandonar la sesión,
  agregarlo a su conocimiento del perfil del curso.
  Asimismo, el sistema agregará los documentos que el usuario haya incluido
  en esta sesión a la colección documental, con la consiguiente indización
- de los mismos.
+ de los mismos y el procesamiento necesario para la expansión del perfil
+ del curso.
 \end_layout
 
 \begin_layout Description
@@ -8741,6 +8749,7 @@ status collapsed
 \begin_layout Plain Layout
 \begin_inset Graphics
 	filename images/7_Use_cases.png
+	scale 50
 
 \end_inset
 
@@ -8910,6 +8919,7 @@ status collapsed
 \begin_layout Plain Layout
 \begin_inset Graphics
 	filename images/9_classDiagram.png
+	scale 50
 
 \end_inset
 
@@ -8955,7 +8965,21 @@ reference "sub:use_cases"
 
 .
  Aquí se presentan diagramas de interacción profundizando en los casos de
- uso, un diagrama de estado y un prototipo
+ uso (figuras 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:interaction_diagrams-1-3"
+
+\end_inset
+
+ y 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:interaction_diagrams-4-6"
+
+\end_inset
+
+ ), un diagrama de estado (figura <>) y un prototipo
 \begin_inset Foot
 status collapsed
 
@@ -8984,6 +9008,314 @@ reference "fig:interface_prototype"
 \end_inset
 
 ).
+ 
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+
+\lyxline
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename images/UML/UC1_session_start.dia
+	scale 30
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Caso de Uso 1: IniciarSesión
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\lyxline
+
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename images/UML/UC2_document.dia
+	scale 30
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Caso de Uso 2: Documenta
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\lyxline
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename images/UML/UC3_add_document.dia
+	scale 30
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Caso de uso 3: AgregaDocumento
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:interaction_diagrams-1-3"
+
+\end_inset
+
+Diagramas de interacción para los casos de uso 1 al 3
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+
+\lyxline
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename images/UML/UC4_select_document.dia
+	scale 30
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Caso de uso 4: UsaRecomendación
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\lyxline
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset VSpace vfill
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename images/UML/UC5_close_session.dia
+	scale 30
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Caso de uso 5: CierraSesión
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\lyxline
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset VSpace vfill
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename images/UML/UC6_update_collection.dia
+	scale 30
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Caso de uso 6: ActualizaColección
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:interaction_diagrams-4-6"
+
+\end_inset
+
+Diagramas de interacción para los casos de uso 4 al 6
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -8995,6 +9327,7 @@ status collapsed
 \begin_layout Plain Layout
 \begin_inset Graphics
 	filename images/10_Home.png
+	scale 50
 
 \end_inset
 
